# i3blocks

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  Makefile.am  README.adoc  README.md  autogen.sh  bar.c  bar.h  bash-completion  block.c  block.h  click.c  click.h  config.c  config.h  configure.ac  i3bar.c  i3blocks.1  i3blocks.1.adoc  i3blocks.1.md  i3blocks.1.ronn  i3blocks.c  i3blocks.conf  index.html  ini.c  ini.h  io.c  io.h  json.c  json.h  line.c  line.h  log.h  main.c  map.c  map.h  sched.c  sched.h  (+7 more)
contrib/: backlight  config  mediaplayer  mpd.py  netspeed  openvpn
docs/: README.adoc  Rakefile  blocklets-docinfo.html  blocklets.adoc  blocklets.css  blocklets.html  blocklets.js  i3blocks.1  i3blocks.1.adoc  i3blocks.1.html  i3xrocks.1  i3xrocks.1.adoc  i3xrocks.1.html  index.html  pre-commit
include/: bar.h  block.h  click.h  config.h  ini.h  io.h  json.h  line.h  log.h  map.h  sched.h  sys.h
scripts/: bandwidth  bandwidth2  battery  cpu  cpu_usage  date  disk  hijri-date.py  iface  iface-ng  isrunning  key-layout  key_layout  keyindicator  kube  language  layout  load_average  mediaplayer  memory  mpd  network  openvpn  stopwatch_countdown  temperature  volume  wifi
src/: bar.c  block.c  click.c  config.c  ini.c  io.c  json.c  main.c  map.c  sched.c  sys.c
